assets/style.css
html {
	box-sizing: border-box;
	background-color: #222;
	font-family: 'Comfortaa';
	overflow: hidden;
}

::-moz-selection {
	color: #fff;
	background: #222;
}

::selection {
	color: #fff;
	background: #222;
}

#main {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	opacity: 0;
}

#main.ready {
	opacity: 1;
	transition: opacity 500ms;
}

#defaultCanvas0 {
	z-index: 0;
}

#uibox {
	position: fixed;
	width: 100vw;
	height: calc((100vh - 600px) / 2);
	min-height: 40px;
	bottom: 15px;
	z-index: 1;
	text-align: center;
}

.ui {
	display: inline-block;
	text-align: center;
	font-weight: 600;
	font-size: 32px;
	color: #eee;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

#root {
	position: absolute;
	top: 20px;
	left: 20px;
	font-size: 14px;
	text-decoration: none;
	color: #fff;
}

#root:hover {
	background-color: #000;
}

#northsymbol,
#eastsymbol,
#northtext,
#easttext {
	color: #fff;
	margin: 0px 15px;
}

#inputBoxHolder {
	position: relative;
	width: 100%;
	height: calc((100vh - 600px) / 2);
	min-height: 40px;
}

#inputBox {
	position: relative;
	width: 600px;
	height: 40px;
	text-align: center;
	font-family: 'Comfortaa';
	background-color: transparent;
	color: #fff;
	border: none;
	line-height: normal;
	font-size: 28px;
	top: calc(100% - 40px);
	left: 50%;
	transform: translateX(-50%);
	z-index: 1;
}

#inputBox:focus {
	outline: none;
}

